ADD: Filter para excepciones http y implementacion de traduciones de mensaje general

--- a/src/i18n/en/validation.json
+++ b/src/i18n/en/validation.json
@@ -1,5 +1,7 @@
 {
   "httpMessages": {
-    "success": "Process executed successfully"
+    "success": "Process executed successfully",
+    "resourceNotFound": "The requested resource was not found",
+    "badRequest": "Validation errors"
   }
 }
