--- a/src/i18n/es/validation.json
+++ b/src/i18n/es/validation.json
@@ -1,5 +1,7 @@
 {
   "httpMessages": {
-    "success": "Proceso ejecutado con éxito"
+    "success": "Proceso ejecutado con éxito",
+    "resourceNotFound": "No se encontró el recurso solicitado",
+    "badRequest": "Errores de validación"
   }
 }
