UPATE: Migration to uuid on postgres db, ADD: mongodb and first integration with jwtblacklist

--- a/src/i18n/en/validation.json
+++ b/src/i18n/en/validation.json
@@ -2,6 +2,7 @@
   "httpMessages": {
     "success": "Process executed successfully",
     "resourceNotFound": "The requested resource was not found",
-    "badRequest": "Validation errors"
+    "badRequest": "Validation errors",
+    "internalServerError": "Internal error"
   }
 }
