ADD: abstraccion DateService para libreria de fechas, esquema inicial para proceso de otp

--- a/src/i18n/en/auth.json
+++ b/src/i18n/en/auth.json
@@ -1,4 +1,8 @@
 {
   "invalidCredentials": "Invalid credentials",
-  "userNotFound": "User not found"
+  "userNotFound": "User not found",
+  "otp": {
+    "alreadySent": "A verification code was already sent. Please wait a few minutes before requesting a new code",
+    "notFound": "The code entered does not exist or has expired"
+  }
 }
