--- a/src/i18n/es/auth.json
+++ b/src/i18n/es/auth.json
@@ -1,4 +1,8 @@
 {
   "invalidCredentials": "Credenciales inválidas",
-  "userNotFound": "Usuario no encontrado"
+  "userNotFound": "Usuario no encontrado",
+  "otp": {
+    "alreadySent": "Ya se ha enviado un código de verificación. Espere unos minutos antes de solicitar uno nuevo",
+    "notFound": "El código ingresado no existe o ha expirado"
+  }
 }
