udpate: Otp processes with tests

--- a/src/i18n/es/auth.json
+++ b/src/i18n/es/auth.json
@@ -3,6 +3,7 @@
   "userNotFound": "Usuario no encontrado",
   "otp": {
     "alreadySent": "Ya se ha enviado un código de verificación. Espere unos minutos antes de solicitar uno nuevo",
-    "notFound": "El código ingresado no existe o ha expirado"
+    "invalid": "El código ingresado no es valido o ha expirado",
+    "invalidProcess": "Proceso no valido o ha expirado"
   }
 }
