--- a/src/i18n/en/auth.json
+++ b/src/i18n/en/auth.json
@@ -3,6 +3,7 @@
   "userNotFound": "User not found",
   "otp": {
     "alreadySent": "A verification code was already sent. Please wait a few minutes before requesting a new code",
-    "notFound": "The code entered does not exist or has expired"
+    "invalid": "The code entered does not valid or has expired",
+    "invalidProcess": "Invalid or expired process"
   }
 }
