add: Html Template y envio de correo para solicitud de otp

--- a/src/i18n/en/mail.json
+++ b/src/i18n/en/mail.json
@@ -1,5 +1,11 @@
 {
   "helloMail": {
     "subject": "👋 Welcome to NeoKanban"
+  },
+  "otp": {
+    "subject": "Verification code",
+    "processType": {
+      "resetPassword": "Reset password"
+    }
   }
 }
