--- a/src/i18n/es/mail.json
+++ b/src/i18n/es/mail.json
@@ -1,5 +1,11 @@
 {
   "helloMail": {
     "subject": "👋 Bienvenido a NeoKanban"
+  },
+  "otp": {
+    "subject": "Código de verificación",
+    "processType": {
+      "resetPassword": "Restablecer contraseña"
+    }
   }
 }
